@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static char libbk__rcsid[] = "$Id: proto.c,v 1.2 2001/08/16 21:10:48 seth Exp $";
+static char libbk__rcsid[] = "$Id: proto.c,v 1.3 2001/09/03 15:31:03 seth Exp $";
 static char libbk__copyright[] = "Copyright (c) 2001";
 static char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -17,25 +17,142 @@ static char libbk__contact[] = "<projectbaka@baka.org>";
  */
 
 #include <libbk.h>
-#include "libbk_internal.h"
+
+
+#define ERRORQUEUE_DEPTH 64			/* Default depth */
 
 
 
+/*
+ * Information of international importance to everyone
+ * which cannot be passed around.
+ */
 struct global_structure
 {
 } Global;
 
 
 
+/*
+ * Information about basic program runtime configuration
+ */
+struct program_config
+{
+  char	   *pc_person;				/* The person to greet */
+  bk_flags pc_flags;				/* Flags are fun! */
+#define PC_VERBOSE	1
+};
+
+
+
+void usage(bk_s B);
+int proginit(bk_s B, struct program_config *pconfig);
+void progrun(bk_s B, struct program_config *pconfig);
+
+
+
 int
 main(int argc, char **argv, char **envp)
 {
-  bk_s pg_bk;					/* Baka general structure */
+  bk_s B = NULL;				/* Baka general structure */
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "SIMPLE");
+  int tmpvar;
+  int getopterr = 0;
+  extern char *optarg;
+  extern int optind;
+  struct program_config Pconfig, *pconfig;
 
-  if (!(pg_bk=bk_general_init(argc, &argv, &envp, BK_ENV_GWD("BK_ENV_CONF_APP", BK_APP_CONF), 64, BK_ERR_ERR, 0)))
+  if (!(B=bk_general_init(argc, &argv, &envp, BK_ENV_GWD("BK_ENV_CONF_APP", BK_APP_CONF), ERRORQUEUE_DEPTH, BK_ERR_ERR, 0)))
   {
-    fprintf(stderr,"Could not initialize baka structure");
-    exit(1);
+    fprintf(stderr,"Could not perform basic initialization\n");
+    exit(254);
   }
-  exit(0);
+  bk_fun_reentry(B);
+
+  pconfig = &Pconfig;
+  memset(pconfig,0,sizeof(*pconfig));
+
+  while ((tmpvar = getopt(argc, argv, "dp:v")) != -1)
+    switch (tmpvar)
+    {
+    case 'd':
+      bk_general_debug_config(B, stderr, BK_ERR_NONE, 0);
+      bk_debug_printf(B, "Debugging on\n");
+      break;
+    case 'p':
+      pconfig->pc_person = optarg;
+      break;
+    case 'v':
+      BK_FLAG_SET(pconfig->pc_flags, PC_VERBOSE);
+      bk_error_config(B, BK_GENERAL_ERROR(B), ERRORQUEUE_DEPTH, stderr, BK_ERR_NONE, BK_ERR_ERR, 0);
+      break;
+    default:
+      getopterr++;
+    }
+  if (getopterr)
+  {
+    usage(B);
+    bk_exit(B,254);
+  }
+    
+  if (proginit(B, pconfig) < 0)
+  {
+    bk_die(B,254,stderr,"Could not perform program initialization\n",BK_FLAG_ISSET(pconfig->pc_flags, PC_VERBOSE)?BK_WARNDIE_WANTDETAILS:0);
+  }
+
+  progrun(B, pconfig);
+  bk_exit(B,0);
+  abort();
+}
+
+
+
+/*
+ * Usage
+ */
+void usage(bk_s B)
+{
+  fprintf(stderr,"Usage: %s: [-dv]\n",BK_GENERAL_PROGRAM(B));
+}
+
+
+
+/*
+ * Initialization
+ */
+int proginit(bk_s B, struct program_config *pconfig)
+{
+  BK_ENTRY(B, __FUNCTION__,__FILE__,"SIMPLE");
+
+  if (!pconfig)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Invalid argument\n");
+    BK_RETURN(B, -1);
+  }
+
+  BK_RETURN(B, 0);
+}
+
+
+
+/*
+ * Normal processing
+ */
+void progrun(bk_s B, struct program_config *pconfig)
+{
+  BK_ENTRY(B, __FUNCTION__,__FILE__,"SIMPLE");
+  char *person = "World";
+
+  if (!pconfig)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Invalid argument\n");
+    BK_VRETURN(B);
+  }
+
+  if (pconfig->pc_person)
+    person = pconfig->pc_person;
+
+  printf("Hello %s\n",person);
+
+  BK_VRETURN(B);
 }
