@@ -1,7 +1,12 @@
 2001-08-31  Seth Robertson  <seth@yeah.baka.org>
 
+	* src/proto.c: Full prototype "Hello World".  Will need more work
+	(or a different version!) once additional functionality becomes
+	ready.
+
 	* lib/b_error.c (bk_error_idump): Get working, reverse order.
 	(be_error_output): Enable time output.
+	(bk_error_iprint): output errors during runtime only if hi priority
 
 2001-08-30  Seth Robertson  <seth@yeah.baka.org>
 
